--- a/cybertalks/resources/views/pages/event.edge
+++ b/cybertalks/resources/views/pages/event.edge
@@ -1,2 +1,14 @@
 @layout.main()
+
+@slot('main')
+
+<div class="h-1/2 flex flex-col items-center justify-center">
+  <img src="https://jdimi.com/wp-content/uploads/sites/4/2022/03/Cyber-Security-PNG-Clipart.png" alt="">
+  <h1 class="text-5xl md:text-7xl font-bold text-center">
+    {{ title }}
+  </h1>
+</div>
+
+@endslot
+
 @end
