--- a/cybertalks/resources/views/pages/event.edge
+++ b/cybertalks/resources/views/pages/event.edge
@@ -7,6 +7,13 @@
   <h1 class="text-5xl md:text-7xl font-bold text-center">
     {{ title }}
   </h1>
+
+  <h2 class="mt-10 text-4x1 md:text-7x1 font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-neutral-900 to-sky-500">Speakers</h2>
+  <div class="flex flex-col gap-4 pt-5">
+    @each(item in speakers)
+    <p class="font-semibold text-">{{ item.name }}</p>
+    @end
+  </div>
 </div>
 
 @endslot
