--- a/cybertalks/resources/views/pages/event.edge
+++ b/cybertalks/resources/views/pages/event.edge
@@ -8,10 +8,10 @@
     {{ title }}
   </h1>
 
-  <h2 class="mt-10 text-4x1 md:text-7x1 font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-neutral-900 to-sky-500">Speakers</h2>
-  <div class="flex flex-col gap-4 pt-5">
-    @each(item in speakers)
-    <p class="font-semibold text-">{{ item.name }}</p>
+  <h1 class="mt-10 text-4xl md:text-7xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r">Speakers</h1>
+  <div class="flex flex-col gap-4">
+    @each(item in Speakers)
+    <h1 class="font-semibold text">{{ item.name }}</h1>
     @end
   </div>
 </div>
