--- a/cybertalks/resources/views/pages/event.edge
+++ b/cybertalks/resources/views/pages/event.edge
@@ -3,15 +3,14 @@
 @slot('main')
 
 <div class="h-1/2 flex flex-col items-center justify-center">
-  <img src="https://jdimi.com/wp-content/uploads/sites/4/2022/03/Cyber-Security-PNG-Clipart.png" alt="">
   <h1 class="text-5xl md:text-7xl font-bold text-center">
     {{ title }}
   </h1>
 
-  <h2 class="mt-10 text-4xl md:text-7xl font-bold text-center bg-clip-text bg-gradient-to-r from-neutral-900 to-sky-500">Speakers</h2>
-  <div class="flex flex-col gap-4">
-    @each(item in Speakers)
-    <h1 class="font-semibold text-">{{ item.name }}</h1>
+  <h2 class="mt-10 text-4xl md:text-7xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-neutral-900 to-sky-500">Speakers</h2>
+  <div class="flex flex-col gap-4 pt-5">
+    @each(item in speakers)
+      <p class="font-semibold text-">{{ item.name }}</p>
     @end
   </div>
 </div>
