--- a/cybertalks/resources/views/pages/speakers.edge
+++ b/cybertalks/resources/views/pages/speakers.edge
@@ -4,7 +4,7 @@
 <main class="w-3/4 mx-auto">
   @include('components/partials/header')
   <div class="">
-
+    {{ inspect(speakers)}}
   </div>
 </main>
 @endslot
