--- a/cybertalks/resources/views/pages/contact.edge
+++ b/cybertalks/resources/views/pages/contact.edge
@@ -15,7 +15,8 @@
       {{ inspect(data) }}
     </p>
     @end
-    <form action="" method="post">
+    <form action={{ route('contactForm') }} method="post">
+      {{ csrfField() }}
       <div class="flex flex-col gap-4">
         <label for="name" class="text-lg">Nom</label>
         <input type="text" name="name" id="name" class="w-full p-2 border-2 border-neutral-500 text-neutral-700">
