--- a/cybertalks/resources/views/pages/speakers_new.edge
+++ b/cybertalks/resources/views/pages/speakers_new.edge
@@ -1,8 +1,8 @@
-layout.mail()
+@layout.main()
 
-@slot('mail')
+@slot('main')
 
-<form action="" method="post" class="flex flex-col gap-5">
+<form action="{{ route('speakerCreate') }}" method="post" class="flex flex-col gap-5 text-neutral-500">
     {{ csrfField() }}
     <input type="text" name="name" placeholder="Martin">
     <input type="text" name="speciality" placeholder="Tech Lead">
