--- a/cybertalks/resources/views/pages/speakers-new.edge
+++ b/cybertalks/resources/views/pages/speakers-new.edge
@@ -2,6 +2,11 @@
 
 @slot('main')
 
+@if(message)
+    <div class="bg-slate-50 text-4x1 text-neutral-800">
+        {{ message }}
+    </div>
+@end
 <form action="{{ route('speakerCreate') }}" method="post" class="flex flex-col gap-5 text-neutral-500">
     {{ csrfField() }}
     <input type="text" name="name" placeholder="Martin">
